Fixed overlapping map issue

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,6 +1,6 @@
 .rsvp {
   width: 70%;
-  height: 100px;
+  min-height: 100%;
   margin-left: auto;
   margin-right: auto;
 }
